--- a/_scss/ui/_base.scss
+++ b/_scss/ui/_base.scss
@@ -19,7 +19,13 @@ body {
   background-color: #8a0202;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
   font-weight: 400;
   margin: .5em 0;
 }
